--HG-- branch : utgb extra : convert_revision : svn%3A4f659da4-262b-0410-8d43-f410cfebde8d/trunk/utgb%401506

--- a/pom.xml
+++ b/pom.xml
@@ -226,4 +226,28 @@
       <url>dav:http://maven.utgenome.org/repository/site/utgb</url>
     </site>
   </distributionManagement>
+
+
+  <profiles>
+    <profile>
+      <id>continuum</id>
+     <distributionManagement>
+       <repository>
+        <id>utgb.dav</id>
+        <name>UTGB Maven Repository</name>
+        <url>file:///home/web/maven.utgenome.org/repository/artifact</url>
+       </repository>
+       <snapshotRepository>
+        <id>utgb.dav</id>
+        <name>UTGB Maven Snapshot Repository</name>
+        <url>file:///home/web/maven.utgenome.org/repository/snapshot</url>
+       </snapshotRepository>
+       <site>
+         <id>utgb.dav</id>
+         <url>file:///home/web/maven.utgenome.org/repository/site/utgb</url>
+       </site>
+      </distributionManagement>
+    </profile>
+  </profiles>
+
 </project>
