--HG-- branch : utgb extra : convert_revision : svn%3A4f659da4-262b-0410-8d43-f410cfebde8d/trunk/utgb%401511

--- a/pom.xml
+++ b/pom.xml
@@ -240,17 +240,17 @@
       <id>continuum</id>
      <distributionManagement>
        <repository>
-        <id>utgb.dav</id>
+        <id>utgb.local</id>
         <name>UTGB Maven Repository</name>
         <url>file:///home/web/maven.utgenome.org/repository/artifact</url>
        </repository>
        <snapshotRepository>
-        <id>utgb.dav</id>
+        <id>utgb.local</id>
         <name>UTGB Maven Snapshot Repository</name>
         <url>file:///home/web/maven.utgenome.org/repository/snapshot</url>
        </snapshotRepository>
        <site>
-         <id>utgb.dav</id>
+         <id>utgb.local</id>
          <url>file:///home/web/maven.utgenome.org/repository/site/utgb</url>
        </site>
       </distributionManagement>
