--HG-- branch : utgb extra : convert_revision : svn%3A4f659da4-262b-0410-8d43-f410cfebde8d/trunk/utgb%401513

--- a/pom.xml
+++ b/pom.xml
@@ -227,6 +227,7 @@
       <id>utgb.dav</id>
       <name>UTGB Maven Snapshot Repository</name>
       <url>dav:http://maven.utgenome.org/repository/snapshot</url>
+      <uniqueVersion>false</uniqueVersion>
     </snapshotRepository>
     <site>
       <id>utgb.dav</id>
@@ -248,6 +249,7 @@
         <id>utgb.local</id>
         <name>UTGB Maven Snapshot Repository</name>
         <url>file:///home/web/maven.utgenome.org/repository/snapshot</url>
+       <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
        <site>
          <id>utgb.local</id>
