--HG-- branch : utgb extra : convert_revision : svn%3A4f659da4-262b-0410-8d43-f410cfebde8d/trunk/utgb%401535

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <module>utgb-medaka</module>
     <module>utgb-master</module>
     <module>utgb-mmdb</module>
+    <module>utgb-util</module>
   </modules>
 
 
