--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,13 @@
             <aggregate>true</aggregate>
           </configuration>
 	</plugin>
+
+	<!--
+	<plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>changelog-maven-plugin</artifactId>
+	</plugin>
+	-->
     </plugins>
   </reporting>
 
@@ -207,6 +214,7 @@
         <enabled>true</enabled>
       </snapshots>
     </repository>
+
   </repositories>
 
 
