--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,11 @@
           <artifactId>changelog-maven-plugin</artifactId>
 	</plugin>
 	-->
+
+	<plugin>
+	  <groupId>org.apache.maven.plugins</groupId>
+	  <artifactId>maven-surefire-report-plugin</artifactId>
+	</plugin>
     </plugins>
   </reporting>
 
