--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.utgenome</groupId>
   <artifactId>utgb-parent</artifactId>
   <name>UTGB Project</name>
-  <version>1.0.1-SNAPSHOT</version>
+  <version>1.0.2-SNAPSHOT</version>
   <description>The University of Tokyo Genome Browser (UTGB) Projects</description>
   <packaging>pom</packaging>
   
@@ -22,6 +22,7 @@
     <module>utgb-master</module>
     <module>utgb-mmdb</module>
     <module>utgb-util</module>
+    <module>utgb-style</module>
   </modules>
 
 
@@ -90,6 +91,15 @@
       </roles>
       <timezone>+9</timezone>
     </developer>
+    <developer>
+      <id>ahsan</id>
+      <name>Budrul Ahsan</name>
+      <organization>University of Tokyo</organization>
+      <roles>
+        <role>developer</role>
+      </roles>
+      <timezone>+9</timezone>
+    </developer>
   </developers>
 
 
@@ -137,6 +147,22 @@
         <configuration>
           <tagBase>http://svn.utgenome.org/utgb/tags/utgb</tagBase>
         </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+	<configuration>
+	  <inputEncoding>Shift_JIS</inputEncoding>
+	  <outputEncoding>UTF-8</outputEncoding>
+	</configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.xerial.maven</groupId>
+            <artifactId>doxia-aqua</artifactId>
+            <version>1.0.1</version>
+          </dependency>
+        </dependencies>
       </plugin>
 
     </plugins>
@@ -194,12 +220,12 @@
     <repository>
       <id>xerial</id>
       <name>Xerial Artifact Repository</name>
-      <url>http://maven.xerial.org/repository/artifact</url>
+      <url>http://www.xerial.org/maven/repository/artifact</url>
     </repository>
     <repository>
       <id>xerial-snapshot</id>
       <name>Xerial Artifact Repository</name>
-      <url>http://maven.xerial.org/repository/snapshot</url>
+      <url>http://www.xerial.org/maven/repository/snapshot</url>
       <snapshots>
         <enabled>true</enabled>
       </snapshots>
@@ -227,7 +253,7 @@
     <pluginRepository>
       <id>xerial</id>
       <name>Xerial Artifact Repository</name>
-      <url>http://maven.xerial.org/repository/artifact</url>
+      <url>http://www.xerial.org/maven/repository/artifact</url>
     </pluginRepository>
   </pluginRepositories>
 
