--HG-- branch : utgb extra : convert_revision : svn%3A4f659da4-262b-0410-8d43-f410cfebde8d/trunk/utgb%401602

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   
   <inceptionYear>2007</inceptionYear>
 
-  <url>http://maven.utgenome.org/repository/site/utgb</url>
+  <url>http://utgenome.org/</url>
 
 
   <modules>
