parent pom update to utgb-parent-1.0.2
--HG--
branch : utgb
extra : convert_revision : svn%3A4f659da4-262b-0410-8d43-f410cfebde8d/trunk/utgb%401604

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.utgenome</groupId>
   <artifactId>utgb-parent</artifactId>
   <name>UTGB Project</name>
-  <version>1.0.2-SNAPSHOT</version>
+  <version>1.0.2</version>
   <description>The University of Tokyo Genome Browser (UTGB) Projects</description>
   <packaging>pom</packaging>
   
@@ -12,11 +12,11 @@
 
   <url>http://utgenome.org/</url>
 
-
   <modules>
     <module>utgb-core</module>
     <module>utgb-shell</module>
     <module>utgb-gallery</module>
+    <module>utgb-widget</module>
     <module>utgb-human</module>
     <module>utgb-medaka</module>
     <module>utgb-master</module>
