--- a/utgb-style/pom.xml
+++ b/utgb-style/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>org.utgenome</groupId>
   <artifactId>utgb-style</artifactId>
-  <version>1.0</version>
+  <version>1.0.1-SNAPSHOT</version>
   <description>UTGBl Project Styles</description>
   <packaging>jar</packaging>
   <name>UTGB Style</name>
@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.utgenome</groupId>
     <artifactId>utgb-parent</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
   </parent>
 
  <repositories>
