--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,24 @@
       </roles>
       <timezone>+9</timezone>
     </developer>
+    <developer>
+      <id>sasaatu</id>
+      <name>Atsushi Sasaki</name>
+      <organization>University of Tokyo</organization>
+      <roles>
+        <role>developer</role>
+      </roles>
+      <timezone>+9</timezone>
+    </developer>
+    <developer>
+      <id>reginaldo</id>
+      <name>Reginaldo Kuroshu</name>
+      <organization>University of Tokyo</organization>
+      <roles>
+        <role>developer</role>
+      </roles>
+      <timezone>+9</timezone>
+    </developer>
   </developers>
 
 
