--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.utgenome</groupId>
   <artifactId>utgb-parent</artifactId>
   <name>UTGB Project</name>
-  <version>1.0.2</version>
+  <version>1.1-SNAPSHOT</version>
   <description>The University of Tokyo Genome Browser (UTGB) Projects</description>
   <packaging>pom</packaging>
   
@@ -22,6 +22,7 @@
     <module>utgb-master</module>
     <module>utgb-mmdb</module>
     <module>utgb-util</module>
+    <module>utgb-widget</module>
     <module>utgb-style</module>
   </modules>
 
