--HG-- branch : utgb extra : convert_revision : svn%3A4f659da4-262b-0410-8d43-f410cfebde8d/trunk/utgb%401662

--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,12 @@
     <module>utgb-gallery</module>
     <module>utgb-widget</module>
     <module>utgb-human</module>
-    <module>utgb-medaka</module>
     <module>utgb-master</module>
     <module>utgb-mmdb</module>
     <module>utgb-util</module>
     <module>utgb-widget</module>
     <module>utgb-style</module>
+    <module>browser</module>
   </modules>
 
 
