--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.utgenome</groupId>
   <artifactId>utgb-parent</artifactId>
   <name>UTGB Project</name>
-  <version>1.1</version>
+  <version>1.2-SNAPSHOT</version>
   <description>The University of Tokyo Genome Browser (UTGB) Projects</description>
   <packaging>pom</packaging>
   
