--HG-- branch : utgb extra : convert_revision : svn%3A4f659da4-262b-0410-8d43-f410cfebde8d/trunk/utgb%401883

--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 
  <ciManagement>
     <system>hudson</system>
-    <url>http://maven.utgenome.org/hudson</url>
+    <url>http://utgenome.org/hudson</url>
   </ciManagement>
 
   <mailingLists>
