--- a/utgb-style/pom.xml
+++ b/utgb-style/pom.xml
@@ -7,7 +7,7 @@
   <groupId>org.utgenome</groupId>
   <artifactId>utgb-style</artifactId>
   <version>1.3.1-SNAPSHOT</version>
-  <description>UTGBl Project Styles</description>
+  <description>UTGB Project Styles</description>
   <packaging>jar</packaging>
   <name>UTGB Style</name>
 
