--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,12 @@
       <version>4.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.utgeonme</groupId>
+      <artifactId>utgb-style</artifactId>
+      <version>1.3.1-SNAPSHOT</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <!-- Java Doc -->
