--- a/pom.xml
+++ b/pom.xml
@@ -207,7 +207,7 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.utgeonme</groupId>
+      <groupId>org.utgenome</groupId>
       <artifactId>utgb-style</artifactId>
       <version>1.3.1-SNAPSHOT</version>
       <scope>test</scope>
