--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.utgenome</groupId>
-  <artifactId>utgb-parent</artifactId>
+  <artifactId>utgb</artifactId>
   <name>UTGB Project</name>
-  <version>1.3.2-SNAPSHOT</version>
-  <description>The University of Tokyo Genome Browser (UTGB) Projects</description>
+  <version>1.0-SNAPSHOT</version>
+  <description>The University of Tokyo Genome Browser (UTGB) Project</description>
   <packaging>pom</packaging>
   
   <inceptionYear>2007</inceptionYear>
@@ -75,6 +75,23 @@
       <timezone>+9</timezone>
     </developer>
     <developer>
+      <name>Jun Yoshimura</name>
+      <organization>University of Tokyo</organization>
+      <roles>
+		<role>Technician</role>
+      </roles>
+      <timezone>+9</timezone>
+    </developer>
+    <developer>
+      <id>sasaki</id>
+      <name>Atsushi Sasaki</name>
+      <organization>University of Tokyo</organization>
+      <roles>
+        <role>Developer</role>
+      </roles>
+      <timezone>+9</timezone>
+    </developer>
+    <developer>
       <id>ssksn</id>
       <name>Shin Sasaki</name>
       <organization>University of Tokyo</organization>
@@ -86,15 +103,6 @@
     <developer>
       <id>ahsan</id>
       <name>Budrul Ahsan</name>
-      <organization>University of Tokyo</organization>
-      <roles>
-        <role>Developer</role>
-      </roles>
-      <timezone>+9</timezone>
-    </developer>
-    <developer>
-      <id>sasaki</id>
-      <name>Atsushi Sasaki</name>
       <organization>University of Tokyo</organization>
       <roles>
         <role>Developer</role>
@@ -120,14 +128,6 @@
       </roles>
       <timezone>+9</timezone>
     </contributor>
-    <contributor>
-      <name>Jun Yoshimura</name>
-      <organization>University of Tokyo</organization>
-      <roles>
-	<role>Technician</role>
-      </roles>
-      <timezone>+9</timezone>
-    </contributor>
   </contributors>
 
   <build>
@@ -138,6 +138,9 @@
       </resource>
       <resource>
         <directory>src/main/resources</directory>
+        <excludes>
+          <exclude>**/.svn/**</exclude>
+        </excludes>
       </resource>
     </resources>
     <testResources>
@@ -154,7 +157,6 @@
       <extension>
         <groupId>org.apache.maven.wagon</groupId>
         <artifactId>wagon-webdav</artifactId>
-        <version>1.0-beta-2</version>
       </extension>
     </extensions>
 
@@ -168,18 +170,28 @@
         </configuration>
       </plugin>
 
+      <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-eclipse-plugin</artifactId>
+        <configuration>
+          <useProjectReferences>false</useProjectReferences>
+        </configuration>
+      </plugin>
+
+
       <!-- tag directory -->
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
         <configuration>
           <tagBase>http://svn.utgenome.org/utgb/tags/utgb</tagBase>
+          <goals>deploy</goals>
         </configuration>
       </plugin>
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
-	<version>2.0-beta-7</version>
+		<version>2.0-beta-7</version>
         <dependencies>
           <dependency>
             <groupId>org.xerial.maven</groupId>
@@ -197,7 +209,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.1</version>
+      <version>4.7</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -237,8 +249,8 @@
 	  <groupId>org.apache.maven.plugins</groupId>
 	  <artifactId>maven-surefire-report-plugin</artifactId>
 	  <configuration>
-            <aggregate>true</aggregate>
-          </configuration>
+         <aggregate>true</aggregate>
+      </configuration>
 	</plugin>
     </plugins>
   </reporting>
@@ -330,7 +342,7 @@
 
   <profiles>
     <profile>
-      <id>continuum</id>
+      <id>hudson</id>
      <distributionManagement>
        <repository>
         <id>utgb.local</id>
