--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,6 @@
 
   <url>http://utgenome.org/</url>
 
-  <modules>
-    <module>utgb-core</module>
-    <module>utgb-shell</module>
-  </modules>
-
 
   <issueManagement>
     <system>Google Code</system>
@@ -36,6 +31,12 @@
       <archive>http://groups.google.com/group/utgb-users?hl=en</archive>
     </mailingList>
     <mailingList>
+      <name>UTGB Users JP</name>
+      <subscribe>http://groups.google.com/group/utgb-users-jp/subscribe?hl=en</subscribe>
+      <post>http://groups.google.com/group/utgb-users-jp/post?hl=en</post>
+      <archive>http://groups.google.com/group/utgb-users-jp?hl=en</archive>
+    </mailingList>
+    <mailingList>
       <name>UTGB Deverlopers</name>
       <subscribe>http://groups.google.com/group/utgb/subscribe?hl=en</subscribe>
       <post>http://groups.google.com/group/utgb/post?hl=en</post>
@@ -52,9 +53,9 @@
   </licenses>
 
   <scm>
-    <connection>scm:svn:http://svn.utgenome.org/utgb/trunk/utgb</connection>
-    <developerConnection>scm:svn:http://svn.utgenome.org/utgb/trunk/utgb</developerConnection>
-    <url>http://svn.utgenome.org/utgb/trunk/utgb/</url>
+    <connection>scm:hg:http://www.xerial.org/hg/utgb-site</connection>
+    <developerConnection>scm:hg:ssh://hg@sprite.xerial.org/public/utgb-site</developerConnection>
+    <url>http://www.xerial.org/hg</url>
   </scm>
 
   <organization>
@@ -191,7 +192,7 @@
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
         <configuration>
-          <tagBase>http://svn.utgenome.org/utgb/tags/utgb</tagBase>
+          <tagBase>scm:hg:http://www.xerial.org/hg/utgb-site</tagBase>
           <goals>deploy</goals>
         </configuration>
       </plugin>
