--- a/utgb-core/pom.xml
+++ b/utgb-core/pom.xml
@@ -2,17 +2,18 @@
 
   <parent>
     <groupId>org.utgenome</groupId>
-    <artifactId>utgb</artifactId>
-    <version>1.0</version>
+    <artifactId>utgb-toolkit</artifactId>
+    <version>1.0-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.utgenome</groupId>
   <artifactId>utgb-core</artifactId>
   <name>UTGB Core</name>
-  <version>1.0.24-SNAPSHOT</version>
+  <version>${utgb.version}</version>
   <description>UTGB Core Components</description>
   <packaging>jar</packaging>
+
 
   <properties>
     <gwt.version>1.7.0</gwt.version>
