--- a/utgb-shell/pom.xml
+++ b/utgb-shell/pom.xml
@@ -1,15 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <groupId>org.utgenome</groupId>
-    <artifactId>utgb</artifactId>
-    <version>1.1</version>
+    <artifactId>utgb-toolkit</artifactId>
+    <version>1.0-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.utgenome</groupId>
   <artifactId>utgb-shell</artifactId>
   <packaging>jar</packaging>
-  <version>1.2.19-SNAPSHOT</version>
+  <version>${utgb.version}</version>
   <name>UTGB Shell</name>
   <description>A command-line client of UTGB tools.</description>
 
