--- a/pom.xml
+++ b/pom.xml
@@ -232,7 +232,6 @@
       <version>4.7</version>
       <scope>test</scope>
     </dependency>
-
   </dependencies>
 
   <!-- Java Doc -->
@@ -243,7 +242,7 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>2.2</version>
         <configuration>
-          <doctitle>UTGB Project API</doctitle>
+          <doctitle>UTGB Toolkit ${utgb.version}</doctitle>
           <aggregate>true</aggregate>
           <locale>en_US</locale>
 <!--          <stylesheetfile>${basedir}/javadoc.css</stylesheetfile> -->
