--- a/utgb-shell/pom.xml
+++ b/utgb-shell/pom.xml
@@ -19,9 +19,17 @@
   </properties>
 
   <build>
+    <resources>
+      <resource>
+        <directory>src/main/java</directory>
+        <filtering>true</filtering>
+        <includes>
+          <include>**/pom.xml.template</include>
+        </includes>
+      </resource>
+    </resources>
 
     <plugins>
-
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
@@ -55,7 +63,7 @@
           <descriptors>
             <descriptor>src/assemble/distribution.xml</descriptor>
           </descriptors>
-        </configuration>
+        </configuration>  
         <executions>
           <execution>
             <id>make-assembly</id>
