--- a/utgb-shell/src/main/java/org/utgenome/shell/template/java/scaffold/pom.xml.template
+++ b/utgb-shell/src/main/java/org/utgenome/shell/template/java/scaffold/pom.xml.template
@@ -300,7 +300,7 @@
     <dependency>
       <groupId>org.utgenome</groupId>
       <artifactId>utgb-core</artifactId>
-      <version>1.0.23</version>
+      <version>${utgb.version}</version>
     </dependency>
 
     
