--- a/utgb-shell/pom.xml
+++ b/utgb-shell/pom.xml
@@ -22,6 +22,14 @@
     <resources>
       <resource>
         <directory>src/main/java</directory>
+        <filtering>false</filtering>
+        <excludes>
+          <exclude>**/.svn/**</exclude>
+          <exclude>**/pom.xml.template</exclude>
+        </excludes>
+      </resource>
+      <resource>
+        <directory>src/main/java</directory>
         <filtering>true</filtering>
         <includes>
           <include>**/pom.xml.template</include>
@@ -30,6 +38,15 @@
     </resources>
 
     <plugins>
+    
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
+        <configuration>
+          <escapeString>\</escapeString>
+        </configuration>
+      </plugin>
+    
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
