--- a/utgb-shell/pom.xml
+++ b/utgb-shell/pom.xml
@@ -19,30 +19,12 @@
   </properties>
 
   <build>
-    <resources>
-      <resource>
-        <directory>src/main/java</directory>
-        <filtering>false</filtering>
-        <excludes>
-          <exclude>**/.svn/**</exclude>
-          <exclude>**/pom.xml.template</exclude>
-        </excludes>
-      </resource>
-      <resource>
-        <directory>src/main/java</directory>
-        <filtering>true</filtering>
-        <includes>
-          <include>**/pom.xml.template</include>
-        </includes>
-      </resource>
-    </resources>
-
     <plugins>
-    
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
         <configuration>
+          <encoding>UTF-8</encoding>
           <escapeString>\</escapeString>
         </configuration>
       </plugin>
