--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,6 @@
   <scm>
     <connection>scm:hg:https://utgb.googlecode.com/hg/</connection>
     <developerConnection>scm:hg:default</developerConnection>
-	<url>https://utgb.googlecode.com/hg/</url>
   </scm>
 
   <organization>
@@ -199,9 +198,8 @@
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
         <configuration>
-          <tagBase>scm:hg:https://utgb.googlecode.com/hg</tagBase>
-		  <developerConnection>scm:hg:default</developerConnection>
           <goals>deploy</goals>
+          <connectionUrl>scm:hg:https://utgb.googlecode.com/hg/</connectionUrl>
         </configuration>
       </plugin>
 
