--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,12 @@
   <packaging>pom</packaging>
 
   <modules>
-	<module>utgb-core</module>
+    <module>utgb-core</module>
     <module>utgb-shell</module>
   </modules>
 
   <properties>
-    <utgb.version>1.3.1-SNAPSHOT</utgb.version>
+    <utgb.version>1.3.0</utgb.version>
     <gwt.version>1.7.0</gwt.version>
     <sqlite-jdbc.version>3.6.20</sqlite-jdbc.version>
   </properties>
