--- a/pom.xml
+++ b/pom.xml
@@ -4,17 +4,17 @@
   <groupId>org.utgenome</groupId>
   <artifactId>utgb-toolkit</artifactId>
   <name>UTGB Toolkit</name>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.3.0-SNAPSHOT</version>
   <description>The University of Tokyo Genome Browser (UTGB) Toolkit</description>
   <packaging>pom</packaging>
-
+ 
   <modules>
     <module>utgb-core</module>
     <module>utgb-shell</module>
   </modules>
 
   <properties>
-    <utgb.version>1.3.0</utgb.version>
+    <utgb.version>${project.version}</utgb.version>
     <gwt.version>1.7.0</gwt.version>
     <sqlite-jdbc.version>3.6.20</sqlite-jdbc.version>
   </properties>
