--- a/utgb-shell/pom.xml
+++ b/utgb-shell/pom.xml
@@ -2,14 +2,14 @@
   <parent>
     <groupId>org.utgenome</groupId>
     <artifactId>utgb-toolkit</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.3.0-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.utgenome</groupId>
   <artifactId>utgb-shell</artifactId>
   <packaging>jar</packaging>
-  <version>1.3.1-SNAPSHOT</version>
+  <version>1.3.0-SNAPSHOT</version>
   <name>UTGB Shell</name>
   <description>A command-line client of UTGB Toolkit.</description>
 
@@ -104,7 +104,7 @@
     <dependency>
       <groupId>org.utgenome</groupId>
       <artifactId>utgb-core</artifactId>
-      <version>${utgb.version}</version>
+      <version>${project.version}</version>
     </dependency>
 
 
