change release preparation from clean verify to clean install

--- a/pom.xml
+++ b/pom.xml
@@ -198,7 +198,7 @@
         <artifactId>maven-release-plugin</artifactId>
         <configuration>
 	  <autoVersionSubmodules>true</autoVersionSubmodules>
-	  <preparationGoals>clean verify install</preparationGoals>
+	  <preparationGoals>clean install</preparationGoals>
           <goals>deploy</goals>
           <connectionUrl>scm:hg:https://utgb.googlecode.com/hg/</connectionUrl>
         </configuration>
