changed the default install location to $HOME/.utgb

--- a/utgb-shell/Makefile
+++ b/utgb-shell/Makefile
@@ -1,8 +1,7 @@
 
 INSTALL = install
 MVN = mvn ${MVN_OPTS}
-INSTALL_DIR=/usr/local
-UTGB_DIR = $(INSTALL_DIR)/utgb
+INSTALL_DIR=${HOME}/.utgb
 
 ARCHIVE = target/utgb-package.zip
 SCRIPT_DIR = src/main/java/org/utgenome/shell/script
@@ -23,13 +22,8 @@ $(ARCHIVE): $(JAVA)
 install: $(ARCHIVE) $(SCRIPT_DIR)/bin/utgb
 	mkdir -p $(INSTALL_DIR)	
 	unzip -o $(ARCHIVE) -d target
-	cp -r target/utgb $(INSTALL_DIR)
+	cp -rp target/utgb/* $(INSTALL_DIR)
 	rm -rf target/utgb
-	ln -sf $(UTGB_DIR)/bin/utgb $(INSTALL_DIR)/bin/utgb
-
-uninstall: 
-	rm -rf $(UTGB_DIR)
-	rm -f $(INSTALL_DIR)/bin/utgb
 
 dist:	
 
