added shortcut for compiling GWT application

--- a/utgb-core/Makefile
+++ b/utgb-core/Makefile
@@ -12,3 +12,7 @@ EGT2XML:
 	mvn assembly:single -Ddescriptor=src/main/assembly/EGT2XML.xml -DfinalName=EGT2XML.jar
 	
 
+draft: 
+	mvn dependency:build-classpath -Dmdep.outputFile="target/classpath"
+	ant -f build-gwt.xml draft-compile -Dgwt.module=org.utgenome.gwt.utgb.UTGBEntry
+	
