--- a/utgb-core/Makefile
+++ b/utgb-core/Makefile
@@ -15,4 +15,8 @@ EGT2XML:
 draft: 
 	mvn dependency:build-classpath -Dmdep.outputFile="target/classpath"
 	ant -f build-gwt.xml draft-compile -Dgwt.module=org.utgenome.gwt.utgb.UTGBEntry
+
+compile: 
+	mvn dependency:build-classpath -Dmdep.outputFile="target/classpath"
+	ant -f build-gwt.xml compile -Dgwt.module=org.utgenome.gwt.utgb.UTGBEntry
 	
