--- a/utgb-core/src/main/webapp/WEB-INF/web.xml
+++ b/utgb-core/src/main/webapp/WEB-INF/web.xml
@@ -30,6 +30,17 @@
     <url-pattern>/service</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+    <servlet-name>remoteLoggingServiceImpl</servlet-name>
+    <servlet-class>com.google.gwt.libideas.logging.server.RemoteLoggingServiceImpl
+    </servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>remoteLoggingServiceImpl</servlet-name>
+    <url-pattern>/logging</url-pattern>
+  </servlet-mapping>
+
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
