compact fasta generator done
--HG--
rename : utgb-core/src/main/java/org/utgenome/util/sequence/CompactFASTA.java => utgb-core/src/main/java/org/utgenome/util/sequence/CompactFASTAGenerator.java

--- a/utgb-core/pom.xml
+++ b/utgb-core/pom.xml
@@ -154,6 +154,13 @@
       <version>1.2</version>
     </dependency>
 
+    <!-- ant library contains tar.bz2 extracting utility -->
+    <dependency>
+      <groupId>org.apache.ant</groupId>
+      <artifactId>ant</artifactId>
+      <version>1.7.1</version>
+    </dependency>
+
 
     <dependency>
       <groupId>org.utgenome.thirdparty</groupId>
