--- a/utgb-shell/pom.xml
+++ b/utgb-shell/pom.xml
@@ -111,7 +111,7 @@
     <dependency>
       <groupId>org.xerial</groupId>
       <artifactId>xerial-core</artifactId>
-      <version>1.0.18</version>
+      <version>1.0.19-SNAPSHOT</version>
     </dependency>
 
     <dependency>
