--- a/utgb-core/pom.xml
+++ b/utgb-core/pom.xml
@@ -165,7 +165,7 @@
     <dependency>
       <groupId>org.utgenome.thirdparty</groupId>
       <artifactId>sam</artifactId>
-      <version>1.11</version>
+      <version>1.16</version>
     </dependency>
 
 
@@ -178,7 +178,7 @@
     <dependency>
       <groupId>org.xerial</groupId>
       <artifactId>xerial-core</artifactId>
-      <version>1.0.19</version>
+      <version>1.0.20-SNAPSHOT</version>
     </dependency>
 
     <dependency>
