--- a/utgb-core/pom.xml
+++ b/utgb-core/pom.xml
@@ -178,7 +178,7 @@
     <dependency>
       <groupId>org.xerial</groupId>
       <artifactId>xerial-core</artifactId>
-      <version>1.0.20-SNAPSHOT</version>
+      <version>1.0.20</version>
     </dependency>
 
     <dependency>
