--- a/utgb-shell/src/main/resources/org/utgenome/shell/template/java/scaffold/pom.xml.template
+++ b/utgb-shell/src/main/resources/org/utgenome/shell/template/java/scaffold/pom.xml.template
@@ -174,7 +174,7 @@
                 <artifactItem>
                   <groupId>org.utgenome.theme</groupId>
                   <artifactId>theme-default</artifactId>
-                  <version>1.0</version>
+                  <version>\${utgb.version}</version>
                   <type>jar</type>
                 </artifactItem>
               </artifactItems>
