using non-snapshot version of xerial-core

--- a/pom.xml
+++ b/pom.xml
@@ -237,7 +237,7 @@
     <dependency>
       <groupId>org.xerial</groupId>
       <artifactId>xerial-core</artifactId>
-      <version>1.0.23-SNAPSHOT</version>
+      <version>1.0.23</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
