--- a/utgb-shell/pom.xml
+++ b/utgb-shell/pom.xml
@@ -101,6 +101,13 @@
 
   <dependencies>
 
+	<!-- Maven Embedder -->
+	<dependency>
+		<groupId>org.apache.maven</groupId>
+		<artifactId>maven-embedder</artifactId>
+		<version>3.0-beta-1</version>
+	</dependency>
+
     <dependency>
       <groupId>org.utgenome</groupId>
       <artifactId>utgb-core</artifactId>
