--- a/utgb-shell/src/main/resources/org/utgenome/shell/template/java/scaffold/pom.xml.template
+++ b/utgb-shell/src/main/resources/org/utgenome/shell/template/java/scaffold/pom.xml.template
@@ -65,19 +65,12 @@
       </testResource>
     </testResources>
 
-    <!-- for WebDAV -->
-    <extensions>
-      <extension>
-        <groupId>org.apache.maven.wagon</groupId>
-        <artifactId>wagon-webdav</artifactId>
-      </extension>
-    </extensions>
-
 
   <plugins>
   
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.0.2</version>
         <configuration>
 	  <!-- Use JDK 1.5 until Java6 for Mac OS X is released -->
           <source>1.5</source>
@@ -88,6 +81,7 @@
       <plugin>
 		<groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-eclipse-plugin</artifactId>
+        <version>2.8</version>
         <configuration>
           <buildOutputDirectory>war/utgb/WEB-INF/classes</buildOutputDirectory>
           <useProjectReferences>false</useProjectReferences>
@@ -109,6 +103,7 @@
   
      <plugin>
       <artifactId>maven-assembly-plugin</artifactId>
+      <version>2.2-beta-3</version>
       <configuration>
         <descriptors>
           <descriptor>src/assembly/jar.xml</descriptor>
@@ -130,6 +125,7 @@
       <!--  GWT compiler -->
       <plugin>
         <artifactId>maven-antrun-plugin</artifactId>
+        <version>1.3</version>
         <executions>
           <execution>
             <phase>compile</phase>
@@ -160,6 +156,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
+        <version>2.0</version>
         <executions>
           
           <!-- Copy UTGB Themes -->
@@ -224,6 +221,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>tomcat-maven-plugin</artifactId>
+        <version>1.0-alpha-1</version>
         <configuration>
           <server>tomcat</server>
           <url>http://localhost:8080/manager</url>
