--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <packaging>pom</packaging>
  
   <modules>
-	<module>utgb-themes</module>
+    <module>utgb-themes</module>
     <module>utgb-core</module>
     <module>utgb-shell</module>
   </modules>
@@ -167,19 +167,11 @@
       </testResource>
     </testResources>
 
-    <!-- for WebDAV -->
-    <extensions>
-      <extension>
-        <groupId>org.apache.maven.wagon</groupId>
-        <artifactId>wagon-webdav</artifactId>
-	<version>1.0-beta-2</version>
-      </extension>
-    </extensions>
-
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
+	<version>2.4</version>
         <configuration>
           <encoding>UTF-8</encoding>
         </configuration>
@@ -187,6 +179,7 @@
 	  
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
+	<version>2.0.2</version>
         <configuration>
 	  <!-- Use JDK 1.5 until Java6 for Mac OS X is released -->
           <source>1.5</source>
@@ -195,8 +188,9 @@
       </plugin>
 
       <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
+	<groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-eclipse-plugin</artifactId>
+	<version>2.8</version>
         <configuration>
           <useProjectReferences>false</useProjectReferences>
         </configuration>
@@ -206,6 +200,7 @@
       <!-- tag directory -->
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
+	<version>2.0-beta-9</version>
         <configuration>
 	  <commitByProject>true</commitByProject>
 	  <localCheckout>true</localCheckout>
@@ -219,7 +214,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
-		<version>2.0-beta-7</version>
+	<version>2.0-beta-7</version>
         <dependencies>
           <dependency>
             <groupId>org.xerial.maven</groupId>
@@ -266,6 +261,7 @@
 	<plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jxr-plugin</artifactId>
+	  <version>2.1</version>
 	  <configuration>
             <aggregate>true</aggregate>
           </configuration>
@@ -281,9 +277,10 @@
 	<plugin>
 	  <groupId>org.apache.maven.plugins</groupId>
 	  <artifactId>maven-surefire-report-plugin</artifactId>
+	  <version>2.5</version>
 	  <configuration>
-         <aggregate>true</aggregate>
-      </configuration>
+            <aggregate>true</aggregate>
+	  </configuration>
 	</plugin>
     </plugins>
   </reporting>
