--- a/utgb-shell/pom.xml
+++ b/utgb-shell/pom.xml
@@ -23,15 +23,23 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
+        <version>2.4</version>
         <configuration>
           <encoding>UTF-8</encoding>
           <escapeString>\</escapeString>
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>2.0</version>
+      </plugin>
     
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
+        <version>1.3</version>
         <configuration>
           <transformers>
             <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
@@ -76,6 +84,7 @@
 
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
+        <version>2.0-beta-9</version>
         <configuration>
           <!--  do not run site-deploy goal, included in the default settings  -->
           <goals>deploy</goals>
@@ -100,6 +109,15 @@
   </scm>
 
   <dependencies>
+  	
+  	<!-- GWT dev -->
+	<dependency>
+		<groupId>com.google.gwt</groupId>
+		<artifactId>gwt-dev</artifactId>
+		<version>${gwt.version}</version>
+		<scope>provided</scope>
+	</dependency>
+
 
 	<!-- Maven Embedder -->
 	<dependency>
