--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
   <properties>
     <gwt.version>2.0.3</gwt.version>
-    <sqlite-jdbc.version>3.6.20</sqlite-jdbc.version>
+    <sqlite-jdbc.version>3.6.20.1</sqlite-jdbc.version>
   </properties>
   
   <inceptionYear>2007</inceptionYear>
@@ -200,7 +200,7 @@
       <!-- tag directory -->
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
-	<version>2.0-beta-9</version>
+	<version>2.0</version>
         <configuration>
 	  <commitByProject>true</commitByProject>
 	  <localCheckout>true</localCheckout>
