--- a/pom.xml
+++ b/pom.xml
@@ -200,7 +200,7 @@
       <!-- tag directory -->
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
-	<version>2.0-beta-9</version>
+	<version>2.0</version>
         <configuration>
 	  <commitByProject>true</commitByProject>
 	  <localCheckout>true</localCheckout>
