--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.utgenome</groupId>
   <artifactId>utgb-toolkit</artifactId>
   <name>UTGB Toolkit</name>
-  <version>1.3.2-SNAPSHOT</version>
+  <version>1.3.2</version>
   <description>The University of Tokyo Genome Browser (UTGB) Toolkit</description>
   <packaging>pom</packaging>
  
@@ -200,7 +200,7 @@
       <!-- tag directory -->
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
-	<version>2.0</version>
+	<version>2.0-beta-8</version>
         <configuration>
 	  <commitByProject>true</commitByProject>
 	  <localCheckout>true</localCheckout>
