--- a/utgb-installer/pom.xml
+++ b/utgb-installer/pom.xml
@@ -12,7 +12,7 @@
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>UTGB Installer</name>
-  <description>Java Web Start based UTGB Toolkit Installer.</description>
+  <description>UTGB Toolkit Installer for Java Web Start</description>
 
   <properties>
     <revision>$Revision: 2538 $</revision>
@@ -142,7 +142,7 @@
     <dependency>
       <groupId>org.xerial</groupId>
       <artifactId>xerial-core</artifactId>
-      <version>1.0.14</version>
+      <version>1.0.27</version>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
@@ -150,12 +150,11 @@
       <version>1.4</version>
     </dependency>
 
-
-	<dependency>
-	  <groupId>org.codehaus.plexus</groupId>
-  	  <artifactId>plexus-classworlds</artifactId>
-  	  <version>2.2.1</version>
-	</dependency>
+    <dependency>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-classworlds</artifactId>
+      <version>2.2.1</version>
+    </dependency>
 
   </dependencies>
 </project>
